// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MSHWAR-32 locale snapshots > renders the destinations index in ar 1`] = `
<div>
  <div
    class="shell-frame grid gap-10 py-12 md:py-16"
  >
    <header
      class="mx-auto max-w-2xl text-center"
    >
      <p
        class="text-xs uppercase tracking-[0.18em] text-text-muted"
      >
        ستة أماكن. ألف طريقة للذهاب.
      </p>
      <h1
        class="mt-3 text-4xl font-semibold tracking-tight md:text-6xl"
      >
        إلى أين ستتجول؟
      </h1>
      <p
        class="mt-4 text-text-muted"
      >
        ابدأ بمكان، ثم اجعل اليوم لك.
      </p>
    </header>
    <div
      class="grid gap-5 sm:grid-cols-2 lg:grid-cols-3"
    >
      <a
        aria-label="Byblos"
        class="group block"
        href="/ar/destinations/byblos"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Fishing boats in a stone harbour"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1523906834658-6e24ef2386f9?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Mount Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Byblos
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Old town · By the sea · Easy walking
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Batroun"
        class="group block"
        href="/ar/destinations/batroun"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Stone church by the coast"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1548013146-72479768bada?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Batroun
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Coast · Friendly · Relaxed pace
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Bsharri"
        class="group block"
        href="/ar/destinations/bsharri"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Cedar tree against a clear sky"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1448375240586-882707db888b?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Bsharri
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Forest · Outdoors · Mountain air
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Qadisha Valley"
        class="group block"
        href="/ar/destinations/qadisha-valley"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Green mountain valley"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Qadisha Valley
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Hiking · Scenic · Active
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Baalbek"
        class="group block"
        href="/ar/destinations/baalbek"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Ancient stone columns"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1555993533-2719c56586d4?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Bekaa
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Baalbek
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Heritage · Architecture · History
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Beirut"
        class="group block"
        href="/ar/destinations/beirut"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Sea rocks at sunset"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1500375592092-40eb2168fd21?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Beirut
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Beirut
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              City · Coffee · Sunset
            </p>
          </div>
        </article>
      </a>
    </div>
    <p
      class="rounded-pill bg-surface-sunken px-5 py-4 text-center text-sm text-text-muted"
    >
      غطاؤنا الأول ستة وجهات. ستُضاف مناطق وشركاء محليون موثّقون مع نمو السوق.
    </p>
  </div>
</div>
`;

exports[`MSHWAR-32 locale snapshots > renders the destinations index in en 1`] = `
<div>
  <div
    class="shell-frame grid gap-10 py-12 md:py-16"
  >
    <header
      class="mx-auto max-w-2xl text-center"
    >
      <p
        class="text-xs uppercase tracking-[0.18em] text-text-muted"
      >
        Six places. A thousand ways to go.
      </p>
      <h1
        class="mt-3 text-4xl font-semibold tracking-tight md:text-6xl"
      >
        Where will you wander?
      </h1>
      <p
        class="mt-4 text-text-muted"
      >
        Start with a place, then make the day your own.
      </p>
    </header>
    <div
      class="grid gap-5 sm:grid-cols-2 lg:grid-cols-3"
    >
      <a
        aria-label="Byblos"
        class="group block"
        href="/destinations/byblos"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Fishing boats in a stone harbour"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1523906834658-6e24ef2386f9?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Mount Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Byblos
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Old town · By the sea · Easy walking
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Batroun"
        class="group block"
        href="/destinations/batroun"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Stone church by the coast"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1548013146-72479768bada?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Batroun
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Coast · Friendly · Relaxed pace
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Bsharri"
        class="group block"
        href="/destinations/bsharri"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Cedar tree against a clear sky"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1448375240586-882707db888b?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Bsharri
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Forest · Outdoors · Mountain air
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Qadisha Valley"
        class="group block"
        href="/destinations/qadisha-valley"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Green mountain valley"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Qadisha Valley
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Hiking · Scenic · Active
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Baalbek"
        class="group block"
        href="/destinations/baalbek"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Ancient stone columns"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1555993533-2719c56586d4?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Bekaa
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Baalbek
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Heritage · Architecture · History
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Beirut"
        class="group block"
        href="/destinations/beirut"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Sea rocks at sunset"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1500375592092-40eb2168fd21?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Beirut
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Beirut
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              City · Coffee · Sunset
            </p>
          </div>
        </article>
      </a>
    </div>
    <p
      class="rounded-pill bg-surface-sunken px-5 py-4 text-center text-sm text-text-muted"
    >
      Our starting cover is six destinations. More regions and verified local partners will be added as the marketplace grows.
    </p>
  </div>
</div>
`;

exports[`MSHWAR-32 locale snapshots > renders the destinations index in fr 1`] = `
<div>
  <div
    class="shell-frame grid gap-10 py-12 md:py-16"
  >
    <header
      class="mx-auto max-w-2xl text-center"
    >
      <p
        class="text-xs uppercase tracking-[0.18em] text-text-muted"
      >
        Six lieux. Mille façons d’y aller.
      </p>
      <h1
        class="mt-3 text-4xl font-semibold tracking-tight md:text-6xl"
      >
        Où allez-vous flâner ?
      </h1>
      <p
        class="mt-4 text-text-muted"
      >
        Commencez par un lieu, puis faites de la journée la vôtre.
      </p>
    </header>
    <div
      class="grid gap-5 sm:grid-cols-2 lg:grid-cols-3"
    >
      <a
        aria-label="Byblos"
        class="group block"
        href="/fr/destinations/byblos"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Fishing boats in a stone harbour"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1523906834658-6e24ef2386f9?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Mount Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Byblos
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Old town · By the sea · Easy walking
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Batroun"
        class="group block"
        href="/fr/destinations/batroun"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Stone church by the coast"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1548013146-72479768bada?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Batroun
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Coast · Friendly · Relaxed pace
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Bsharri"
        class="group block"
        href="/fr/destinations/bsharri"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Cedar tree against a clear sky"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1448375240586-882707db888b?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Bsharri
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Forest · Outdoors · Mountain air
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Qadisha Valley"
        class="group block"
        href="/fr/destinations/qadisha-valley"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Green mountain valley"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              North Lebanon
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Qadisha Valley
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Hiking · Scenic · Active
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Baalbek"
        class="group block"
        href="/fr/destinations/baalbek"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Ancient stone columns"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1555993533-2719c56586d4?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Bekaa
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Baalbek
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              Heritage · Architecture · History
            </p>
          </div>
        </article>
      </a>
      <a
        aria-label="Beirut"
        class="group block"
        href="/fr/destinations/beirut"
      >
        <article
          class="relative overflow-hidden rounded-card"
        >
          <div
            class="aspect-[4/3] md:aspect-[5/4]"
          >
            <img
              alt="Sea rocks at sunset"
              class="h-full w-full object-cover"
              fetchpriority="auto"
              src="https://images.unsplash.com/photo-1500375592092-40eb2168fd21?auto=format&fit=crop&w=1600&q=80"
            />
          </div>
          <div
            class="absolute inset-0 bg-gradient-to-t from-brand/80 via-brand/15 to-transparent"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right absolute end-4 top-4 size-5 text-brand-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <div
            class="absolute inset-x-0 bottom-0 p-5 text-brand-foreground"
          >
            <p
              class="text-xs uppercase tracking-wide opacity-80"
            >
              Beirut
            </p>
            <h3
              class="mt-1 text-heading font-semibold tracking-tight"
            >
              Beirut
            </h3>
            <p
              class="mt-2 text-sm opacity-90"
            >
              City · Coffee · Sunset
            </p>
          </div>
        </article>
      </a>
    </div>
    <p
      class="rounded-pill bg-surface-sunken px-5 py-4 text-center text-sm text-text-muted"
    >
      Notre couverture de départ : six destinations. D’autres régions et partenaires locaux vérifiés s’ajouteront.
    </p>
  </div>
</div>
`;
